Admins can create users directly

--- a/app/views/admins/components/_users.html.erb
+++ b/app/views/admins/components/_users.html.erb
@@ -143,5 +143,6 @@
 </div>
 
 <%= render "shared/modals/invite_user_modal" %>
+<%= render "shared/modals/create_user_modal" %>
 <%= render "shared/modals/delete_account_modal", delete_location: relative_root %>
 <%= render "shared/modals/merge_user_modal" %>
