--- a/app/views/admins/components/_settings.html.erb
+++ b/app/views/admins/components/_settings.html.erb
@@ -101,6 +101,9 @@
             <%= button_to admin_change_registration_path(value: "approval"), class: "dropdown-item", "data-disable": "" do %>
               <%= t("administrator.site_settings.registration.methods.approval") %>
             <% end %>
+            <%= button_to admin_change_registration_path(value: "direct_add"), class: "dropdown-item", "data-disable": "" do %>
+              <%= t("administrator.site_settings.registration.methods.direct_add") %>
+            <% end %>
           </div>
         </div>
       </div>
