--- a/app/views/user_mailer/account_created_email.text.erb
+++ b/app/views/user_mailer/account_created_email.text.erb
@@ -22,4 +22,6 @@
 
 <%= t('mailer.user.account_created_email.username', email: @user[:email]) %>
 
-<%= t('mailer.user.account_created_email.password', password: @password) %>
+<%= t('mailer.user.account_created_email.password', password: @password) %>       
+
+<%= t('mailer.user.account_created_email.login', login: @url) %>
