--- a/app/views/user_mailer/account_created_email.text.erb
+++ b/app/views/user_mailer/account_created_email.text.erb
@@ -24,4 +24,4 @@
 
 <%= t('mailer.user.account_created_email.password', password: @password) %>       
 
-<%= t('mailer.user.account_created_email.login', login: @url) %>
+Login: <a href="<%= @url %>">https://meet.sagemusic.co/</a>
