--- a/app/views/rooms/components/_room_event.html.erb
+++ b/app/views/rooms/components/_room_event.html.erb
@@ -43,3 +43,5 @@
 <% if render_recordings %>
   <%= render "shared/sessions", recordings: @public_recordings, pagy: @pagy, only_public: true, user_recordings: false, title: t("room.recordings") %>
 <% end %>
+<span>Recordings are deleted after 60 days. Please download to keep.</span>
+
