--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,15 +26,28 @@
 
       <div class="d-flex ml-auto">
         <% if current_user %>
+	  <a href="https://www.sagemusic.co/" class="px-3 mx-1 mt-1 header-nav #{active_home}">
+            <i class="fas fa-home pr-1 "></i><span class="d-none d-sm-inline-block">Sage Music</span></a>
+
 
           <%= link_to home_page, class: "px-3 mx-1 mt-1 header-nav #{active_home}" do %>
-            <i class="fas fa-home pr-1 "></i><span class="d-none d-sm-inline-block"><%= t("header.dropdown.home") %></span>
+            <i class="fas fa-video pr-1 "></i><span class="d-none d-sm-inline-block"><%= t("header.dropdown.home") %></span>
           <% end %>
+
+	
 
           <% if current_user.role.get_permission("can_create_rooms") && !current_user.has_role?(:super_admin) %>
             <% all_rec_page = params[:controller] == "users" && params[:action] == "recordings" ? "active" : "" %>
             <%= link_to get_user_recordings_path(current_user), class: "px-3 mx-1 mt-1 header-nav #{all_rec_page}" do %>
-              <i class="fas fa-video pr-1"></i><span class="d-none d-sm-inline-block"><%= t("header.all_recordings") %></span>
+              <i class="fas fa-play-circle pr-1"></i><span class="d-none d-sm-inline-block"><%= t("header.all_recordings") %></span>
+
+<% if current_user %>
+
+          <a href="https://www.sagemusic.co/support" class="px-3 mx-1 mt-1 header-nav #{active_home}">
+            <i class="fas fa-phone pr-1 "></i><span class="d-none d-sm-inline-block">Student Support</span></a>
+
+          <% end %>
+
             <% end %>
           <% end %>
 
