--- a/app/views/user_mailer/account_created_email.html.erb
+++ b/app/views/user_mailer/account_created_email.html.erb
@@ -17,7 +17,7 @@
 %>
 
   <div style="text-align:center; font-family:'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif">
-    <div style="display:inline-block; background-color:#F5F7FB; border:1px solid #d3d3d3; padding: 25px 70px">
+    <div style="display:inline-block; background-color:#f8f8f8; border:1px solid #d3d3d3; padding: 20px 20px">
       <%= image_tag(@image, height: '70') %>
 
       <h1 style="margin-bottom:30px">
@@ -36,8 +36,10 @@
         <%= t('mailer.user.account_created_email.password', password: @password) %>
       </p>
       
-      <p>
-        <%= t('mailer.user.account_created_email.login', login: @url) %>
-      </p>
+      <a
+        style="background: <%= @color %>;color: #ffffff; padding: 10px 15px; box-shadow: 0 2px 4px 0 rgba(0,0,0,.25);border: 1px solid transparent;text-decoration:none;"
+        href="<%= @url %>">
+        <%= t('mailer.user.account_created_email.login_url') %>
+      </a>
     </div>
   </div>
