--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -16,7 +16,7 @@
 # with BigBlueButton; if not, see <http://www.gnu.org/licenses/>.
 %>
   <div style="text-align:center; font-family:'Source Sans Pro', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif">
-    <div style="display:inline-block; background-color:#F5F7FB; border:1px solid #d3d3d3; padding: 25px 70px">
+    <div style="display:inline-block; background-color:#f8f8f8; border:1px solid #d3d3d3; padding: 20px 20px">
       <%= image_tag(@image, height: '70')%>
 
       <h1 style="margin-bottom:30px">
