--- a/app/views/shared/components/_subtitle.html.erb
+++ b/app/views/shared/components/_subtitle.html.erb
@@ -17,6 +17,7 @@
   <% if search %>
     <div class="col-md-6">
       <p class="subtitle"><%= subtitle %></p>
+      <h5 class="text-left mb-6"><%= t("room.recordings_subheader") %></h5>
     </div>
 
     <div class="col-md-6 mb-4">
